fixed overflow bug in History

--- a/src/widgets/History/ui/styles.module.css
+++ b/src/widgets/History/ui/styles.module.css
@@ -2,4 +2,5 @@
     display: grid;
     grid-template-rows: 12.5% 75% 12.5%;
     grid-template-columns: 1fr;
+    overflow: hidden;
 }
